[workspace]
members = [
  "packages/math",
  "packages/btr_macros"
]

[workspace.dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-schema = "1.1.5"
schemars = "0.8.9"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
borsh = "0.10.3"
thiserror = "1.0"
ethnum = { git = "https://github.com/securesecrets/ethnum-rs" }
primitive-types = { version = "0.12.1", default-features = false }

paste = "1.0"
derive-from-ext = "0.2"
btr-macros = { path = "../btr_macros" }

rstest = "0.15.0"
criterion = "0.3"
serde_json = "1"
proptest = "1.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
